Fix issue with the hero-image not centered and sizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ h1 , h2 {
     padding: 5%;
     list-style-type: none;
     display: inline;
+
 }
 
 #menu a {
@@ -68,8 +69,9 @@ h1 , h2 {
 
 #hero-outer {
     height: 600px;
-    width: 100%;
+    width: 1100px;
     overflow: hidden;
+    margin: 0 auto;
 
     position: relative;
 }
